@@ -1,5 +1,12 @@
 2004-11-04 hugo303
 
+        * src/check.c, src/check_list.c, src/check_list.h, src/check_log.c,
+	src/check_msg.c, tests/check_list.c:
+	Changed name on function list_create to check_list_create to avoid
+	name clash.
+
+2004-11-04 hugo303
+
 	* src/check.c, src/check.h.in, tests/check_check_master.c,
 	tests/check_check_sub.c: Applied ANSI C99 patch (#1047014)
 
